# cxx-hw6_matrix

./: .gitignore  CMakeLists.txt  CMakeSettings.json  task.md  vcpkg.json
include/: c_api.h  export.h  matrix.hpp
src/: c_api.cpp  main.cpp  matrix.cpp
src/test/: test-shared-matrix.cpp  test-static-matrix.cpp
